--- a/relinksys/web/src/app/company-payment/payment/payment.component.html
+++ b/relinksys/web/src/app/company-payment/payment/payment.component.html
@@ -87,9 +87,9 @@
                                         <mat-label>Manual Credit</mat-label>
                                         <div class="row mt-0">
                                             <div class="col-md-3 p-0" style="height: 16px;">
-                                                <mat-checkbox color="primary" class="ms-2" name="ApplyManual"
-                                                    [(ngModel)]="data.ApplyManual"
-                                                    (click)="ApplyManual()"></mat-checkbox>
+                                                <mat-checkbox color="primary" class="ms-2" name="ApplyCustomerManualCredit"
+                                                    [(ngModel)]="data.ApplyCustomerManualCredit"
+                                                     (ngModelChange)="ApplyCustomerManualCredit()"></mat-checkbox>
                                             </div>
                                             <div class="col-md-9 p-0" style="height: 16px;">
                                                 <input type="number" min="0" class="ms-2" matInput name="totalManualCreditAmount"
@@ -99,8 +99,6 @@
                                         </div>
                                     </mat-form-field>
                                 </div>
-
-                                
 
                                 <div *ngIf="this.creditList != ''" class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
@@ -112,6 +110,7 @@
                                         </mat-select>
                                     </mat-form-field>
                                 </div>
+
                                 <div *ngIf="this.creditManualList != ''" class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Customer Credit</mat-label>
@@ -122,6 +121,7 @@
                                         </mat-select>
                                     </mat-form-field>
                                 </div>
+
                                 <div class="col-xl-1 col-lg-2 col-md-3 col-6 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Pay Amount</mat-label>
@@ -132,7 +132,8 @@
                                         </mat-error>
                                     </mat-form-field>
                                 </div>
-                                <div *ngIf="!data.ApplyReturn" class="col-xl-1 col-lg-2 col-md-3 col-6 mb-0">
+                                
+                                <div *ngIf="!data.ApplyReturn && !data.ApplyCustomerManualCredit" class="col-xl-1 col-lg-2 col-md-3 col-6 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Payment Mode</mat-label>
                                         <mat-select name="PayMode" [(ngModel)]="data.PaymentMode" required
@@ -157,7 +158,7 @@
                                 </mat-form-field>
                             </div>
 
-                                <div *ngIf="data.ApplyReturn"  class="col-xl-1 col-lg-2 col-md-3 col-6 mb-0">
+                                <div *ngIf="data.ApplyReturn || data.ApplyCustomerManualCredit"  class="col-xl-1 col-lg-2 col-md-3 col-6 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Payment Mode</mat-label>
                                         <mat-select name="PayMode" [(ngModel)]="data.PaymentMode" required
