--- a/relinksys/web/src/app/company-payment/payment/payment.component.html
+++ b/relinksys/web/src/app/company-payment/payment/payment.component.html
@@ -65,7 +65,7 @@
                                         </mat-error>
                                     </mat-form-field>
                                 </div>
-                                <div class="col-xl-1 col-lg-2 col-md-3 col-6 mb-0">
+                                <div *ngIf="data.ApplyCustomerManualCredit == false" class="col-xl-1 col-lg-2 col-md-3 col-6 mb-0">
                                     <mat-form-field class="example-full-width mb-0 ">
                                         <mat-label>Previous Credit</mat-label>
                                         <div class="row mt-0">
@@ -82,7 +82,7 @@
                                         </div>
                                     </mat-form-field>
                                 </div>
-                                <div *ngIf="data.PaymentType == 'Customer' && data.totalManualCreditAmount != 0" class="col-xl-1 col-lg-2 col-md-3 col-6 mb-0">
+                                <div *ngIf="data.PaymentType == 'Customer' && data.totalManualCreditAmount != 0 && data.ApplyReturn == false" class="col-xl-1 col-lg-2 col-md-3 col-6 mb-0">
                                     <mat-form-field class="example-full-width mb-0 ">
                                         <mat-label>Manual Credit</mat-label>
                                         <div class="row mt-0">
@@ -113,8 +113,8 @@
 
                                 <div *ngIf="this.creditManualList != ''" class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
-                                        <mat-label>Customer Credit</mat-label>
-                                        <mat-select name="customerCredit" [(ngModel)]="customerCredit" (selectionChange)="manualCreditValue()" required
+                                        <mat-label>Customer Manual  Credit</mat-label>
+                                        <mat-select name="customerCredit1" [(ngModel)]="customerCredit" (selectionChange)="manualCreditValue()" required
                                             #customerCreditcontrol1>
                                             <mat-option [value]="c" *ngFor="let c of creditManualList"> {{c.CreditNumber}}  <b style="color: red;float: right;">{{c.Amount}} </b> 
                                             </mat-option>
@@ -158,7 +158,7 @@
                                 </mat-form-field>
                             </div>
 
-                                <div *ngIf="data.ApplyReturn || data.ApplyCustomerManualCredit"  class="col-xl-1 col-lg-2 col-md-3 col-6 mb-0">
+                                <div *ngIf="data.ApplyReturn || data.ApplyCustomerManualCredit"  class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Payment Mode</mat-label>
                                         <mat-select name="PayMode" [(ngModel)]="data.PaymentMode" required
