--- a/relinksys/api/views/optometristPDF.ejs
+++ b/relinksys/api/views/optometristPDF.ejs
@@ -829,7 +829,7 @@
                     <h3 style="padding:0; margin:0; margin-top: 2%; color: #ff3f05; ">Slit Lamp Examination</h3>
               
                     <table class="powerTbl"
-                        style="width: 100%; text-align: left !important;  margin-top: 0%; ">
+                        style="width: 100%; text-align: left !important;  margin-top: 0%; text-transform: uppercase;">
                         <tr class="Allthead" style="height: 15px;">
                             <th></th>
                             <th>RE</th>
