--- a/garment/web/src/app/sale/old-bill/old-bill.component.html
+++ b/garment/web/src/app/sale/old-bill/old-bill.component.html
@@ -66,7 +66,7 @@
                         </mat-error>
                     </mat-form-field>
                 </div>
-                <div class="col-xl-1 col-lg-1 col-md-3 col-4 mb-0 ">
+                <!-- <div class="col-xl-1 col-lg-1 col-md-3 col-4 mb-0 ">
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>Doctor</mat-label>
                         <mat-select name="Doctor" [(ngModel)]="BillMaster.Doctor" [disabled]="BillMaster.ID !== null"
@@ -80,7 +80,7 @@
                             Select Doctor
                         </mat-error>
                     </mat-form-field>
-                </div>
+                </div> -->
                 <div class="col-xl-1 col-lg-1 col-md-3 col-4 mb-0 ">
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>Employee</mat-label>
@@ -137,23 +137,23 @@
                         </div>
                     </mat-form-field>
                 </div>
-                <div *ngIf="company.ID != 241 && company.ID != 300 && this.loginShop.PerOrder === 'true'" class="col-xl-1 col-lg-1 col-md-3 col-4 pt-3">
+                <!-- <div *ngIf="company.ID != 241 && company.ID != 300 && this.loginShop.PerOrder === 'true'" class="col-xl-1 col-lg-1 col-md-3 col-4 pt-3">
                     <mat-slide-toggle name="Preorder" color="primary" [(ngModel)]="BillItem.PreOrder"
                         class="example-margin" #Preordercontrol style="color:#ff651e;"
                         [disabled]="BillItem.Manual === true" (click)="manualDataRefresh()">
                         Preorder</mat-slide-toggle>
-                </div>
-                <div *ngIf="company.ID != 241 && company.ID != 300 && this.loginShop.Manual === 'true'" class="col-xl-1 col-lg-1 col-md-3 col-4 pt-3">
+                </div> -->
+                <div  class="col-xl-1 col-lg-1 col-md-3 col-4 pt-3">
                     <mat-slide-toggle name="Manual" color="primary" [(ngModel)]="BillItem.Manual" class="example-margin"
                         #Manualcontrol style="color:#ff651e;"
                         [disabled]="BillItem.PreOrder === true " (click)="manualDataRefresh()">Manual</mat-slide-toggle>
                 </div>
-                <div *ngIf="company.ID == 241 || company.ID == 300 || company.ID == 1" class="col-xl-1 col-lg-1 col-md-3 col-4 pt-3">
+                <!-- <div *ngIf="company.ID == 241 || company.ID == 300 || company.ID == 1" class="col-xl-1 col-lg-1 col-md-3 col-4 pt-3">
                     <mat-slide-toggle name="Order" color="primary" [(ngModel)]="BillItem.Order" class="example-margin"
                         #Ordercontrol style="color:#ff651e;" 
                         >Order</mat-slide-toggle>
-                </div>
-                <div *ngIf="this.loginShop.DiscountSetting == 'true' && company.ID != 241 && company.ID != 300" class="col-xl-1 col-lg-1 col-md-3 col-4 pt-3">
+                </div> -->
+                <div *ngIf="this.loginShop.DiscountSetting == 'true'" class="col-xl-1 col-lg-1 col-md-3 col-4 pt-3">
                     <mat-slide-toggle name="discontSettingBtn" color="primary" [(ngModel)]="discontSettingBtn" class="example-margin"
                         #discontSettingBtncontrol style="color:#ff651e;"
                         >Disocunt</mat-slide-toggle>
@@ -532,7 +532,7 @@
 
                     <button *ngIf="BillItem.Manual" type="submit"
                         [disabled]="!f1.valid || !fp.valid  || this.GstTypeDis " mat-raised-button
-                        color="primary"  (click)="calculations('GSTPercentage', 'gst');notifyGst();">M<span class="first-letter">a</span>nual</button>
+                        color="primary" >M<span class="first-letter">a</span>nual</button>
 
                     <button *ngIf="BillItem.Order" type="submit"
                         [disabled]="!f1.valid || !fp.valid  || this.GstTypeDis " mat-raised-button
@@ -712,13 +712,13 @@
                                             <mat-icon class="deletes_icon  " title="Cancel">cancel</mat-icon>
                                         </button> -->
 
-                                        <button *ngIf="data.ID != null" class="bgRemove p-0 ms-1"  type="button"
+                                        <!-- <button *ngIf="data.ID != null" class="bgRemove p-0 ms-1"  type="button"
                                             (click)="OrderPrint(data)">
                                             <mat-icon class="pritn_icon  " title="Order Form">print</mat-icon>
-                                        </button>
+                                        </button> -->
 
-                                        <mat-icon *ngIf="data.Status !== 0" class="edit_icon ms-1"  type="button"
-                                            (click)="openModal(content,data)">remove_red_eye</mat-icon>
+                                        <!-- <mat-icon *ngIf="data.Status !== 0" class="edit_icon ms-1"  type="button"
+                                            (click)="openModal(content,data)">remove_red_eye</mat-icon> -->
                                        
                                             
                                         <mat-icon *ngIf="this.editCustomerBill"
@@ -1051,10 +1051,10 @@
                         [disabled]="BillMaster.ID === null" (click)="openModal1(content1)">Payment</button>
                     <!-- <button type="button" class="  me-md-3 me-0" mat-raised-button color="primary"
                         [disabled]="BillMaster.ID === null" (click)="openModal5(content5)">Reward</button> -->
-                    <button  type="button" class="  me-md-3 me-0" mat-raised-button color="primary"
+                    <!-- <button  type="button" class="  me-md-3 me-0" mat-raised-button color="primary"
                         [disabled]="BillMaster.ID === null" (click)="openModal12(content12)">Lens Order</button>
                     <button type="button" class="  me-md-3 me-0" mat-raised-button color="primary"
-                        [disabled]="BillMaster.ID === null" (click)="openModal13(content13)">Fitter Order</button>
+                        [disabled]="BillMaster.ID === null" (click)="openModal13(content13)">Fitter Order</button> -->
                         <button type="button" mat-raised-button color="primary"
                         [disabled]="BillMaster.ID === null || this.fortyPercentDisabledB == true" (click)="billPrint('Invoice')" > <span class="first-letter">R</span>eceipt</button>
                         <!-- <button type="button" (click)="billPrints('Invoice')" class="small_big_Btn"> S</button>
@@ -1065,10 +1065,10 @@
                         <!-- <button type="button" (click)="billPrints('Receipt')" class="small_big_Btn"> S</button>
                         <button type="button" (click)="billPrintB('Receipt')" class="small_big_Btn "> B</button> -->
 
-                    <button type="button" mat-raised-button color="primary" class="ms-md-3">
+                    <!-- <button type="button" mat-raised-button color="primary" class="ms-md-3">
                         <mat-slide-toggle name="ShowPower" color="primary" [(ngModel)]="ShowPower"
                             class="example-margin" #ShowPowercontrol>Show Power</mat-slide-toggle>
-                    </button>
+                    </button> -->
                     <!-- <button type="button"  mat-raised-button color="primary">Receipt +
                         Power</button>
 
@@ -1076,13 +1076,15 @@
                         Power</button> -->
                         <!-- [disabled]="this.BillLink == ''" -->
                    
+                <ng-container class="btn-group w-100" role="group" style=" border-radius: 6px; overflow: hidden;">
+                    <button type="button" *ngIf="this.company.WhatsappMsg == 'true'"   [disabled]="this.BillLink == '' || this.fortyPercentDisabledB == true" (click)="sendWhatsapp('bill')" class="bgRemove whatsappBill ms-lg-2 me-lg-1 ms-md-3 me-md-3 ms-0 me-0"><i  class="fa-brands fa-whatsapp "></i></button>
 
-                    <button type="button" *ngIf="this.company.WhatsappMsg == 'true'"   [disabled]="this.fortyPercentDisabledB == true" (click)="sendWhatsapp('bill')" class="bgRemove whatsappBill ms-lg-2 me-lg-1 ms-md-3 me-md-3 ms-0 me-0"><i  class="fa-brands fa-whatsapp "></i></button>
+                    <button type="button" *ngIf="this.company.EmailMsg == 'true'" [disabled]="BillMaster.ID == null" (click)="sendEmail('Bill')" class="bgRemove ms-0 me-0"><i class="fa-solid fa-envelope EmailBill"></i></button>
 
-                    <button type="button" *ngIf="this.company.EmailMsg == 'true'" [disabled]="BillMaster.ID === null" (click)="sendEmail('Bill')" class="bgRemove ms-0 me-0"><i class="fa-solid fa-envelope EmailBill"></i></button>
-
-                    <button type="button" *ngIf="this.company.WhatsappMsg == 'true'" [disabled]="this.BillLink == '' || this.fortyPercentDisabledB == true" (click)="sendWhatsapp('Fbill')" class="bgRemove whatsappfBill ms-lg-2 me-lg-1 ms-md-3 me-md-3 ms-0 me-0"><i  class="fa-brands fa-whatsapp "></i> Final</button>
+                    <!-- <button type="button" *ngIf="this.company.WhatsappMsg == 'true'" [disabled]="this.BillLink == '' || this.fortyPercentDisabledB == true" (click)="sendWhatsapp('Fbill')" class="bgRemove whatsappfBill ms-lg-2 me-lg-1 ms-md-3 me-md-3 ms-0 me-0"><i  class="fa-brands fa-whatsapp "></i> Final</button> -->
+                    
                     <button type="button" *ngIf="this.company.WhatsappMsg == 'true'" [disabled]="!this.BillMaster.InvoiceNo || this.fortyPercentDisabledB == true" (click)="sendWhatsapp('Textbill')" class="bgRemove whatsappfBill ms-lg-2 me-lg-1 ms-md-3 me-md-3 ms-0 me-0"><i  class="fa-brands fa-whatsapp "></i> Text</button>
+                </ng-container>
                 </div>
             </div>
         </form>
